Fix Dualshock 3 and 4 mappings for Linux kernel 4.10+

In newer versions of the Linux kernel, the hid-sony driver has been
updated to more closely match the Linux gamepad spec. To allow downstream
users to distinguish between the old mappings and the new ones, the
driver patches the hardware version.

Currently, Chrome uses the vendor_id/product_id pair to pick which mapping
function to use. This CL adds the version number as a third item and
selects the updated Dualshock 3 and 4 mappings when the patched version is
detected.

BUG=731311

Change-Id: I6d151ffedfd11e8ec38db62ecbdb9351e7b9a540
Reviewed-on: https://chromium-review.googlesource.com/678257
Reviewed-by: Brandon Jones <bajones@chromium.org>
Commit-Queue: Matt Reynolds <mattreynolds@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503856}
Former-commit-id: cc8089ccaaf0b312f863331ddf7b71576020b4a4