device/gamepad/gamepad_platform_data_fetcher_mac.mm
@@ -311,16 +311,20 @@ void GamepadPlatformDataFetcherMac::DeviceAdd(IOHIDDeviceRef device) {
       IOHIDDeviceGetProperty(device, CFSTR(kIOHIDVendorIDKey))));
   NSNumber* product_id = CFToNSCast(CFCastStrict<CFNumberRef>(
       IOHIDDeviceGetProperty(device, CFSTR(kIOHIDProductIDKey))));
+  NSNumber* version_number = CFToNSCast(CFCastStrict<CFNumberRef>(
+      IOHIDDeviceGetProperty(device, CFSTR(kIOHIDVersionNumberKey))));
   NSString* product = CFToNSCast(CFCastStrict<CFStringRef>(
       IOHIDDeviceGetProperty(device, CFSTR(kIOHIDProductKey))));
   int vendor_int = [vendor_id intValue];
   int product_int = [product_id intValue];
+  int version_int = [version_number intValue];
 
-  char vendor_as_str[5], product_as_str[5];
+  char vendor_as_str[5], product_as_str[5], version_as_str[5];
   snprintf(vendor_as_str, sizeof(vendor_as_str), "%04x", vendor_int);
   snprintf(product_as_str, sizeof(product_as_str), "%04x", product_int);
-  state->mapper =
-      GetGamepadStandardMappingFunction(vendor_as_str, product_as_str);
+  snprintf(version_as_str, sizeof(version_as_str), "%04x", version_int);
+  state->mapper = GetGamepadStandardMappingFunction(
+      vendor_as_str, product_as_str, version_as_str);
 
   NSString* ident =
       [NSString stringWithFormat:@"%@ (%sVendor: %04x Product: %04x)", product,
