device/gamepad/raw_input_data_fetcher_win.cc
@@ -208,7 +208,10 @@ void RawInputDataFetcher::EnumerateDevices() {
 
         std::string vendor = base::StringPrintf("%04x", gamepad->vendor_id);
         std::string product = base::StringPrintf("%04x", gamepad->product_id);
-        state->mapper = GetGamepadStandardMappingFunction(vendor, product);
+        std::string version =
+            base::StringPrintf("%04x", gamepad->version_number);
+        state->mapper =
+            GetGamepadStandardMappingFunction(vendor, product, version);
         state->axis_mask = 0;
         state->button_mask = 0;
 
@@ -286,6 +289,7 @@ RawGamepadInfo* RawInputDataFetcher::ParseGamepadInfo(HANDLE hDevice) {
   gamepad_info->report_id = 0;
   gamepad_info->vendor_id = device_info->hid.dwVendorId;
   gamepad_info->product_id = device_info->hid.dwProductId;
+  gamepad_info->version_number = device_info->hid.dwVersionNumber;
   gamepad_info->buttons_length = 0;
   ZeroMemory(gamepad_info->buttons, sizeof(gamepad_info->buttons));
   gamepad_info->axes_length = 0;
